    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
 16-Mar-2003
Acknowledgements:
    Thanks to Brendan Boesen for adding a method to access session IDs in ServletUnitContext.

Additions:
    1. You can now get at the stored session IDs in ServletUnitContext.
    2. ServletUnit now supports HttpServletRequest.getRequestDispatch()

Notes:
    1. The acceptCookies, acceptGzip, autoRefresh and autoForward properties have been moved from HttpUnitOptions to ClientProperties,
       permitting them to be set per WebClient rather than just globally. The old properties have been deprecated,
       and now access the defaults for ClientProperties. Tests which set the HttpUnitOptions properties before creating
       their WebClients will be unaffected.

 14-Mar-2003
Problems fixed:
    1. When loading a page triggered a script function which redirected to a new page in the same frame,
       the WebResponse returned from getResponse was the triggering page. It is now the redirected page.

 13-Mar-2003
Additions:
    1. Select.value is now supported.
    2. Added WebForm.getButton() method using HTMLPredicate to permit more generalized button searches.

 12-Mar-2003
Acknowledgements:
    Thanks to Daniel Jasmin for fixing the handling of applet loading from archives.

Problems fixed:
    1. Applets were not loading properly from applets if a codebase was specified in the <applet> tag.
    2. Bug #700889: Under certain cases, multiple <script> sections in a document caused a problem where only those HTML elements
       defined before the first one were actually available to the scripts.

  9-Mar-2003
Additions: